fix(footer): fix footer on mobile

--- a/src/components/3D/Scene/THREEScene.module.scss
+++ b/src/components/3D/Scene/THREEScene.module.scss
@@ -16,3 +16,9 @@
 	opacity: 1;
 	background: radial-gradient(circle, $color-primary-transparent-strong 40%, $color-bg 80%);
 }
+
+@include only-mobile {
+	.canvasOverlay {
+		opacity: 0;
+	}
+}
