--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -21,7 +21,7 @@ body {
 
 body {
 	position: relative;
-	overflow: hidden;
+	overflow: auto;
 	background-color: $color-bg;
 
 	/* Background glows */
